--- a/templates/director/view_stat_by_counselor_with_date.html
+++ b/templates/director/view_stat_by_counselor_with_date.html
@@ -265,7 +265,7 @@
   }
 </style>
 <div class="fac">
-  <button type="submit" class="buttonF">List of Students Reffered under this Counselor </button>
+  <button type="submit" class="buttonF">List of Students Refferral under this Counselor </button>
 </div>
 <br>
 <form method="POST" action="{% url 'view_stat_by_counselor_with_date' counselor %}"> {% csrf_token %} <div class="statistic_date">
@@ -307,7 +307,7 @@
   </div>
   <div style="margin-top: 2vh;">
     <i>
-      <h3>are referred under </h3>
+      <h3>are referral under </h3>
     </i>
   </div>
   <div class="data">
