--- a/templates/director/view_stat_by_degree_program.html
+++ b/templates/director/view_stat_by_degree_program.html
@@ -260,7 +260,7 @@
   }
 </style>
 <div class="fac">
-  <button type="submit" class="buttonF">List of Students Referred in this Department</button>
+  <button type="submit" class="buttonF">List of Students Referral in this Department</button>
 </div>
 <br>
 <div class="introduction">
@@ -305,7 +305,7 @@
   </div>
   <div style="margin-top: 2vh;">
     <i>
-      <h3>are &nbsp;  referred &nbsp; in</h3>
+      <h3>are &nbsp;  referral &nbsp; in</h3>
     </i>
   </div>
   <div class="data">
