--- a/templates/director/view_stat_by_degree_program_with_date.html
+++ b/templates/director/view_stat_by_degree_program_with_date.html
@@ -260,7 +260,7 @@
   }
 </style>
 <div class="fac">
-  <button type="submit" class="buttonF">List of Referred Students</button>
+  <button type="submit" class="buttonF">List of Referral Students</button>
 </div>
 <br>
 <div class="introduction">
@@ -307,7 +307,7 @@
   </div>
   <div style="margin-top: 2vh;">
     <i>
-      <h3>are referred in </h3>
+      <h3>are referral in </h3>
     </i>
   </div>
   <div class="data">
