--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -692,7 +692,7 @@ margin-left: 100px; */
                 <img class="image_card" src="https://media.istockphoto.com/vectors/vector-illustration-in-flat-simple-style-online-psychological-help-vector-id1252391886?k=20&m=1252391886&s=612x612&w=0&h=gV16EIdD24s8mRlKIkecAkLcvSwZjSAV1DjC_jIPPws=">
               </div>
               <div class="card_content">
-                <h2 class="card_title">Update</h2>
+                <h2 class="card_title">View Faculty</h2>
               </div>
             </div>
           </a>
