--- a/templates/counselor/detail_feedback.html
+++ b/templates/counselor/detail_feedback.html
@@ -17,22 +17,23 @@
     overflow-wrap: break-word;
   }
 
-  #box {
-    background: #f4f4f4;
-    height: 400px;
-    padding: 15px;
-    overflow-y: scroll;
-    text-align: justify;
-    border: 2px solid black;
-    border-radius: 15px;
-    box-shadow: 5 90px 50px rgba(0, 0, 0, 0.07);
-    min-width: 90vw;
-    min-height: 200px;
-    width: 100px;
-    text-overflow: ellipsis;
-    align-items: left;
-  }
+  /* .box {
+  
+  border: 2px solid black;
+border-radius: 15px;
 
+    box-shadow:
+      5 90px 50px rgba(0, 0, 0, 0.07);
+      min-width: 550px;
+min-height: 200px;
+
+display: flex;
+  width: 100px;
+  white-space: nowrap;
+  text-overflow: ellipsis; 
+  margin-left: 20px;
+   overflow-y: auto;
+} */
   .table-head {
     background: #E5E4E2;
     box-shadow: none;
@@ -237,6 +238,8 @@
     font-size: 19px;
     line-height: 30px;
     text-align: justify;
+    overflow-y: scroll;
+    overflow-x: hidden;
   }
 
   .column {
@@ -258,8 +261,8 @@
   }
 
   .rowText {
-    font-size: 24px;
-    margin: auto;
+    font-size: 20px;
+    margin: 50px;
   }
 
   .image {
@@ -336,12 +339,12 @@
   }
 
   .card1 {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
-    width: 40%;
-    min-height: 500px;
-    border-radius: 5px;
-    margin-left: 500px;
+    width: 42%;
+    min-height: 515px;
+    border-radius: 7px;
+    flex-direction: column;
     /* margin: auto;
   text-align: center; */
     overflow: hidden;
@@ -392,17 +395,49 @@
     transform: translateY(-7px);
   }
 
-  .feedback {
-    align-items: center;
-    display: inline-block;
+  .scroll-box {
+    background: #f4f4f4;
+    width: 30vw;
+    height: 15vh;
+    padding: 6px;
+    overflow-y: scroll;
+    text-align: justify;
+    border: 2px solid black;
+    border-radius: 15px;
+    box-shadow:5 90px 50px rgba(0, 0, 0, 0.07);
+    text-overflow: ellipsis;
+    margin-left: 60px;
   }
 
-  .feedback_title {
-    font-size: 23px;
+  .parent_div {
+    display: flex;
+    flex-direction: row;
+    column-gap: 4rem;
+    margin-left: 6rem;
   }
 
-  .feedback_information {
-    float: left;
+  .message {
+    margin: 0 auto;
+    width: 350px;
+    height: 45px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #fff;
+    background-color: #3c3c5c;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+  }
+  .title-text{
+    font-size: 19px;
+    color: #000000;
+    font-weight: bold;
   }
 </style>
 <br>
@@ -414,28 +449,58 @@
 <!-- <div class="card1"> -->
 <!-- <form action="#" class="cleanForm" method="POST"> -->
 <br>
-<div class="feedback">
-  <div class="feedback_title">
-    <h3>
-      <i>Feedback Information of &nbsp;{{object.lastname}}, {{object.firstname}} because of {{object.reasons}} </i> <br>
-        {% if object.behavior_problem %}
-             <i>With the behavior problem of {{object.behavior_problem}} </i>
-         {% endif %}
-    </h3>
+<div class="parent_div">
+  <div class="card1 ">
+    <form action="#" class="cleanForm" method="POST">
+      <br>
+      <div style="margin-bottom: 4vh;">
+        <h3 style="text-align: justify; margin-left:8px; font-size: 20px;">
+          <i>Feedback Information of &nbsp;{{object.lastname}}, {{object.firstname}}</i>
+        </h3>
+  
+      <div style="margin-top: 5vh; padding: 10px;">
+         <i class="title-text">Reason of Referral:</i>
+      </div>
+        <div class="scroll-box">
+          <p class="Pbox" style="text-align: justify; margin-left:8px;">
+            <b>{{object.reasons}}</b>
+          </p>
+        </div>
+          <br>
+          {% if object.behavior_problem %}
+         <div style="margin-top: 5vh; padding: 10px;">
+           <i class="title-text">With the behavior problem of:</i>
+         </div>
+        <div class="scroll-box">
+          <p class="Pbox" style="text-align: justify; margin-left:8px;">
+            <b>{{object.behavior_problem}}</b>
+             {% endif %}
+          </p>
+        </div>
+       
+      </div>
+    </form>
   </div>
-  <div class="feedback_information">
-    <p class="rowText">
+  <br>
+  <div class="card1">
+    <form action="#" class="cleanForm" method="POST">
       <br>
-      <br>
-      <i>Feedback stated below:</i>
-      <br>
-      <br>
-    <div id="box">
-      <li class="Pbox" style="text-align: justify; margin-left:8px;">
-        <b>{{object.feedback}}</b>
-      </li>
-    </div>
-    </p>
+      <div>
+        <h3 style="text-align: justify; margin-left:8px; font-size: 20px;">
+          <i>Feedback Statement</i>
+        </h3>
+        <p class="rowText">
+               <div style="margin-top: 5vh; padding: 10px;">
+           <i class="title-text">Counselor's Feedback:</i>
+         </div>
+        <div class="scroll-box">
+          <p class="Pbox" style="text-align: justify; margin-left:8px;">
+            <b>{{object.feedback}}</b>
+          </p>
+        </div>
+        </p>
+      </div>
+    </form>
   </div>
 </div>
 <!-- </form> -->
